Bug 207332 - editor works on the wrong image if a new one was chosen while processing
Summary: editor works on the wrong image if a new one was chosen while processing
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Workflow (other bugs)
Version First Reported In: 1.0.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-14 11:20 UTC by S. Burmeister
Modified: 2022-02-03 03:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2009-09-14 11:20:00 UTC
Version:           svn Rev: 1023189 (using KDE 4.3.1)
OS:                Linux
Installed from:    SuSE RPMs

To reproduce:

1. Pick a RAW picture and open it in the editor, wait until you see the preview. Notice that the tools in the menus are all greyed out because the picture was not imported yet.
2. Import the picture, this should take a while
3. While the editor imports, go back to digikam and open another RAW picture in the editor, wait until the preview is fully loaded, but do not import yet.
4. Have a look at the menus, all tools are already enabled, although the picture was not imported yet.
5. Pick e.g. sharpen and the editor will jump back to the picture that was edited before the last one.

Expected behaviour: if the user picked a new picture, forget about the previous one and wait for it to be imported before enabling the tools again.
Comment 1 Andi Clemens 2009-09-14 11:42:25 UTC
I once discovered something similar, but I was not able to reproduce it again (although it happened weeks ago, too):

1. I opened a JPG, used some filters
2. I reverted the image
3. Closed the editor
4. Opened the editor with another image
5. I get the question if I want to save the modifications, although none were made.

Could be a similar problem.
Comment 2 Marcel Wiesweg 2009-09-25 20:54:22 UTC
SVN commit 1028071 by mwiesweg:

Fix special case described in bug report

BUG: 207332

 M  +2 -1      NEWS  
 M  +11 -0     utilities/imageeditor/canvas/dimginterface.cpp  
 M  +2 -0      utilities/imageeditor/editor/editorwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028071