Fix special case described in bug report

BUG: 207332

svn path=/trunk/extragear/graphics/digikam/; revision=1028071